add project flybi card

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -78,6 +78,7 @@ body{
 .nav a{color:var(--muted); text-decoration:none; font-weight:600}
 .nav a:hover{color:var(--text)}
 .header-actions{display:flex; gap:10px; align-items:center}
+.header-actions .btn{ font-size: 18px; }
 
 .btn{
   display:inline-flex; align-items:center; justify-content:center;
@@ -303,11 +304,11 @@ h2{margin:0; font-size:26px}
 .slideshow {
   display: flex;
   transition: transform 0.3s ease-in-out;
+  gap: var(--gap);
 }
 .slideshow > * {
   flex-shrink: 0;
   width: 100%;
-  padding: 0 8px; /* Kleiner Abstand zwischen den Slides */
 }
 @media (min-width: 640px) {
   .slideshow > * {
@@ -356,6 +357,17 @@ h2{margin:0; font-size:26px}
   margin-bottom: 12px;
   border: 1px solid var(--border);
 }
+
+.project-img-slider {
+   width: 100%;
+   height: 200px;
+   background-size: cover;
+   background-position: center;
+   border-radius: var(--radius);
+   margin-bottom: 12px;
+   border: 1px solid var(--border);
+   transition: background-image 0.5s ease-in-out;
+ }
 
 
 /* Dropdown – minimal, nutzt deine Variablen + .card/.btn Styles */
